fixed desktop postion - z-index to 9999

--- a/qbl-web-project/css/index.css
+++ b/qbl-web-project/css/index.css
@@ -149,32 +149,31 @@ li a{
         position: absolute;
         top: 60px; /* Adjust based on your header size */
         right: 50px;
-        background: linear-gradient(135deg, rgba(255,255,255,0.1), rgba(255,255,255,0));
-        backdrop-filter: blur (10px);
+        background: linear-gradient(135deg, rgba(255, 255, 255, 0.1), rgba(255, 255, 255, 0));
+        backdrop-filter: blur(10px);
         -webkit-backdrop-filter: blur(10px);
         width: 200px;
         text-align: center;
-        border-radius: 1px solid rgba(255,255,255,0.18);
-        box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.37);
         border-radius: 10px;
+        box-shadow: 0px 8px 32px 0 rgba(0, 0, 0, 0.37);
+        z-index: 9999; /* Ensure menu is above everything else, including the button */
     }
 
     .menu_items ul {
         flex-direction: column;
-        align-self: center;
+        align-items: center;
         margin-left: 15px;
     }
-
-    
 
     .hamburger {
         display: flex; /* Show the hamburger menu on small screens */
     }
 
-     /* Add glow effect to the button by default on mobile version */
-     .menu_items .contact_btn {
+    /* Add glow effect to the button by default on mobile version */
+    .menu_items .contact_btn {
         box-shadow: 0 0 10px 3px rgba(255, 104, 46, 0.8); /* Glow effect by default */
         background-color: #F16A2E;
+        z-index: 10000; /* Ensure the button stays on top of the mobile menu */
     }
 }
  
